--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="" id="form">
-        <label for="flightfrom" >Fight From:</label>
-        <input type="text" id="flightfrom" required = 'required'>
-        <label for="flightto">Flight To:</label>
-        <input type="text" id="flightto" required = 'required'>
-        <label for="capacity">Capacity:</label>
-        <input type="number" id="capacity" required = 'required'>
-        <label for="reservedseats">Reserved Seats:</label>
-        <input type="number" id="reservedseats" required = 'required'>
-        <input type="submit">
-
-    </form>
-    <table id="flightTable"></table>
-    
+    <header>
+        <h1> Flights data</h1>
+    </header>
+    <main>
+        <form action="" id="form">
+            <label for="flightfrom">Flight From:</label>
+            <input type="text" name="" id="flightfrom">
+            <label for="flightto">Flight To:</label>
+            <input type="text" name="" id="flightto">
+            <label for="capacity">Capacity:</label>
+            <input type="number" name="" id="capacity">
+            <label for="reservedseats">Reserved Seats:</label>
+            <input type="number" name="" id="reservedseats">
+            <input type="submit" name="" id="submit">
+        </form>
+        <table id="table"></table>
+    </main>
+    <footer>
+        <script src="app.js"></script>
+    </footer>
 </body>
-<footer>
-    <script src="app.js"></script>
-</footer>
 </html>
-
-
-
 
 
 
@@ -92,4 +93,4 @@
     <script src="app.js"></script>
 </body>
 </html>
-                    -->
+                
