--- a/index.html
+++ b/index.html
@@ -7,28 +7,184 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1> Flights data</h1>
-    </header>
-    <main>
-        <form action="" id="form">
-            <label for="flightfrom">Flight From:</label>
-            <input type="text" name="" id="flightfrom">
-            <label for="flightto">Flight To:</label>
-            <input type="text" name="" id="flightto">
-            <label for="capacity">Capacity:</label>
-            <input type="number" name="" id="capacity">
-            <label for="reservedseats">Reserved Seats:</label>
-            <input type="number" name="" id="reservedseats">
-            <input type="submit" name="" id="submit">
-        </form>
-        <table id="table"></table>
-    </main>
-    <footer>
-        <script src="app.js"></script>
-    </footer>
+  <header></header>  
+  <main>
+      <form id="form">
+          <label for="from">Flight From</label>
+          <input id="from" type="text">
+
+
+          <label for="to">Fight Destination</label>
+          <input id="to" type="text">
+
+
+
+          <label for="capacity">Capacity</label>
+          <input id="capacity" type="number">
+
+
+          <label for="reserve">Reserved Seats</label>
+          <input id="reserve" type="number">
+
+          <input type="submit">
+      </form>
+      <table id="table"></table>
+      <p id="total"></p>
+  </main>
+  <footer>
+      <script src="app.js"></script>
+  </footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+     <form action="" id="form">
+                        <fieldset>
+                            <label for="flyingFrom">Flying From</label>
+                            <input type="text" name="" id="flyingFrom">
+                            <label for="flyingTo">Flying To</label>
+                            <input type="text" id="flyingTo">
+                            <label for="capacity">Capacity</label>
+                            <input type="number" id="capacity">
+                            <label for="reserved">Reserved Seats</label>
+                            <input type="number" id="reserved">
+                            <input type="submit" name="submit" id="submit">
+                        </fieldset>
+    </form>
+    <table id="flightsTable"></table>
+    <script src="app.js"></script>
+</body>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -72,25 +228,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <form action="" id="form">
-                        <fieldset>
-                            <label for="flyingFrom">Flying From</label>
-                            <input type="text" name="" id="flyingFrom">
-                            <label for="flyingTo">Flying To</label>
-                            <input type="text" id="flyingTo">
-                            <label for="capacity">Capacity</label>
-                            <input type="number" id="capacity">
-                            <label for="reserved">Reserved Seats</label>
-                            <input type="number" id="reserved">
-                            <input type="submit" name="submit" id="submit">
-                        </fieldset>
-    </form>
-    <table id="flightsTable"></table>
-    <script src="app.js"></script>
+    <header></header>
+    <main>
+        <form action="" id="form">
+            <label for="wishList">Wish List</label>
+            <br>
+            <input type="text" name="" id="wishList">
+            <br>
+            <label for="expextedYear">Expected Year</label>
+            <br>
+            <input type="date" name="" id="expextedYear">
+            <br>
+            <input type="submit" name="" id="submit" value="Add">
+        </form>
+        <table id="table"></table>
+    </main>
+    <footer>
+        <script src="app.js"></script>
+    </footer>
+    
 </body>
-</html>
+</html> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 
