--- a/index.html
+++ b/index.html
@@ -3,42 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flight</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header></header>  
-  <main>
-      <form id="form">
-          <label for="from">Flight From</label>
-          <input id="from" type="text">
-
-
-          <label for="to">Fight Destination</label>
-          <input id="to" type="text">
-
-
-
-          <label for="capacity">Capacity</label>
-          <input id="capacity" type="number">
-
-
-          <label for="reserve">Reserved Seats</label>
-          <input id="reserve" type="number">
-
-          <input type="submit">
-      </form>
-      <table id="table"></table>
-      <p id="total"></p>
-  </main>
-  <footer>
-      <script src="app.js"></script>
-  </footer>
+    <header><h1>Air Travel</h1></header>
+    <main>
+        <form action="" id="form">
+            <label for="flightFrom">First Destination:</label>
+            <input type="text" name="" id="flightFrom">
+            <label for="flightInto">Second Destination:</label>
+            <input type="text" name="" id="flightInto">
+            <label for="capacity">Capacity:</label>
+            <input type="number" name="" id="capacity">
+            <label for="reservedSeats">Reserved Seats:</label>
+            <input type="number" name="" id="reservedSeats">
+            <input type="submit" name="" id="submit">
+        </form>
+        <table id="table"></table>
+        <div id="container"></div>
+    </main>
+    <footer>
+        <script src="app.js"></script>
+    </footer>
 </body>
 </html>
-
-
-
 
 
 
@@ -222,37 +211,6 @@
 
 
 
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header></header>
-    <main>
-        <form action="" id="form">
-            <label for="wishList">Wish List</label>
-            <br>
-            <input type="text" name="" id="wishList">
-            <br>
-            <label for="expextedYear">Expected Year</label>
-            <br>
-            <input type="date" name="" id="expextedYear">
-            <br>
-            <input type="submit" name="" id="submit" value="Add">
-        </form>
-        <table id="table"></table>
-    </main>
-    <footer>
-        <script src="app.js"></script>
-    </footer>
-    
-</body>
-</html> -->
 
 
 
