--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="submit" name="" id="submit">
         </form>
         <table id="table"></table>
-        <div id="container"></div>
+        <p id="paragraph"></p>
     </main>
     <footer>
         <script src="app.js"></script>
