--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Royal Airlines</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header></header>  
+  <header><h1>Royal Airline Company</h1></header>  
   <main>
       <form id="form">
-          <label for="from">Flight From</label>
+          <label for="from">Flight From:</label>
           <input id="from" type="text">
 
 
-          <label for="to">Fight Destination</label>
+          <label for="to">Fight Destination:</label>
           <input id="to" type="text">
 
 
 
-          <label for="capacity">Capacity</label>
+          <label for="capacity">Capacity:</label>
           <input id="capacity" type="number">
 
 
-          <label for="reserve">Reserved Seats</label>
+          <label for="reserve">Reserved Seats:</label>
           <input id="reserve" type="number">
 
-          <input type="submit">
+          <input type="submit" value="Add Flight">
       </form>
       <table id="table"></table>
       <p id="total"></p>
